chore: SideNav - remove drawer + make sure its .left/.right props are set on iOS too

--- a/src/dotnet/UI.Blazor/Components/SideNav/side-nav.css
+++ b/src/dotnet/UI.Blazor/Components/SideNav/side-nav.css
@@ -46,16 +46,3 @@ body.narrow:has(.side-nav.side-nav-right.open) .side-nav.side-nav-left {
 body.narrow:has(.side-nav.side-nav-right.open) .side-nav.side-nav-left.open {
     @apply hidden;
 }
-
-/* Drawer */
-.side-nav .side-nav-drawer {
-    @apply fixed;
-    @apply top-14 bottom-14 w-0;
-    @apply bg-transparent;
-}
-.side-nav.side-nav-left .side-nav-drawer {
-    @apply -right-0;
-}
-.side-nav.side-nav-right .side-nav-drawer {
-    @apply -left-0
-}
